Add prefers media queries

--- a/css/main.css
+++ b/css/main.css
@@ -70,4 +70,21 @@ html {
  * =============
  */
 
+@media (prefers-reduced-motion) {
+
+  .gear {
+    animation: none;
+  }
+
+}
+
+@media (prefers-color-scheme: dark) {
+
+  .banner h1 {
+    background-color: #000;
+    color: #fff;
+  }
+
+}
+
 /* stylelint-enable */
